@@ -7,8 +7,9 @@ apt (0.8.16~exp7) experimental; urgency=low
   * apt-pkg/deb/dpkgpm.cc:
     - use std::vector instead of fixed size arrays to store args and
       multiarch-packagename strings
+    - load the dpkg base arguments only one time and reuse them later
 
- -- David Kalnischkies <kalnischkies@gmail.com>  Tue, 20 Sep 2011 11:32:36 +0200
+ -- David Kalnischkies <kalnischkies@gmail.com>  Tue, 20 Sep 2011 11:50:31 +0200
 
 apt (0.8.16~exp6) experimental; urgency=low
 
